# so_intelligence_tools

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.codex/: AGENTS.md  init.sh  settings.json
desktop/: .npmrc  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
docs/: README.md  architecture.md  chatterbox-tts-voice-output.md  configuration.md  contributing-openspec.md  desktop-ui.md  getting-started-linux.md  keyboard-shortcuts.md  linux-installation.md  linux-problems-and-solutions.md  linux-whisper-dictation.md  local-inference-api.md  nemotron-dictation-backup.md  piper-tts-voice-output.md  push-to-talk-dictation.md  screenshot-ocr.md  security-and-secrets.md  selected-text-correction.md  system-audio-translation.md  troubleshooting-linux.md  voice-translation-virtual-microphone.md  whisper-cpu-benchmark-linux.md  whisper-docker.md  windows-audio-routing.md  windows-support.md
openspec/: capabilities-index.md  config.yaml
scripts/: codex-tts-wrapper.cmd  codex-tts-wrapper.py  ensure-linux-desktop-integration.sh  install-linux-deps.sh  run-selected-text-correction-debug.sh  run-system-audio-translation-debug.sh  start-wayland-keyboard-backend.sh
tests/: test_api.py  test_codex_desktop_tts.py  test_codex_tts_wrapper.py  test_codex_voice_control.py  test_codex_voice_events.py  test_faster_whisper_http.py  test_gnome_shortcuts.py  test_inference_client.py  test_linux_text_adapters.py  test_local_tts_client.py  test_ollama_adapter.py  (+20 more)
(+398 files in other folders)
