[tool.poetry]
name = "so-intelligence-tools"
version = "0.1.0"
description = "Base de trabajo para herramientas de IA integradas con el sistema operativo."
authors = ["Sciling <devnull@example.com>"]
readme = "README.md"
packages = [
  { include = "local_inference_api", from = "src" },
  { include = "so_intelligence_tools", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.136.3"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
httpx = "^0.28.1"
python-multipart = "^0.0.32"
pydantic-settings = "^2.14.1"
pynput = "^1.8.2"
openai = "^2.41.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.12.0"

[tool.poetry.scripts]
so-intelligence-tools = "so_intelligence_tools.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
